fix(app): set clerk theme to dark mode

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -37,7 +37,7 @@
   }
 
   .dark {
-    --background: 0 100% 0%;
+    --background: 224 71% 4%;
     --foreground: 213 31% 91%;
 
     --muted: 223 47% 11%;
